--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "spa-github-pages",
-  "version": "6.1.0",
+  "version": "6.0.0",
   "private": true,
   "description": "Single Page Apps for GitHub Pages",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --disable-host-check --open",
+    "start": "webpack-dev-server --devtool eval-source-map --host 0.0.0.0 --disable-host-check --open",
     "build": "webpack -p"
   },
   "repository": {
@@ -14,37 +14,51 @@
   "author": "Rafael Pedicini <rafael@rafgraph.dev>",
   "license": "MIT",
   "dependencies": {
-    "@radix-ui/react-icons": "^1.0.3",
-    "@stitches/react": "^0.1.9",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-interactive": "^1.1.0",
-    "react-router-dom": "^5.2.0",
-    "use-dark-mode": "^2.3.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-interactive": "^0.9.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.25.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "source-map-loader": "^1.1.3",
-    "terser-webpack-plugin": "^4.2.3",
-    "ts-loader": "^8.2.0",
-    "typescript": "^4.2.4",
-    "webpack": "^4.46.0",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "browserslist-config-css-grid": "^1.0.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "browserslist": [
+    "last 2 versions or > 0.2% and not dead and extends browserslist-config-css-grid"
+  ],
+  "eslintConfig": {
+    "root": true,
+    "parser": "babel-eslint",
+    "extends": [
+      "eslint:recommended",
+      "plugin:import/errors",
+      "plugin:react/recommended",
+      "plugin:react-hooks/recommended",
+      "plugin:jsx-a11y/recommended",
+      "prettier",
+      "prettier/react"
+    ],
+    "env": {
+      "browser": true,
+      "node": true
+    }
   },
   "prettier": {
     "trailingComma": "all",
