--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-ui",
   "version": "0.1.0",
-  "homepage": "https://timonsivut.ml",
+  "homepage": "https://difbit.github.io/difbit.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
